feat: auth headers
